# oliviabot

./: .bot-reload-patterns  .gitignore  .root-reload-patterns  Cargo.toml  LICENSE  README.md  _types.py  bot.py  config.pyi  context.py  dev.sh  flake.nix  launcher.py  logos.py  playground.ipynb  push.sh  pyproject.toml  qwd.py  requirements.txt  run.py  run.sh  runner.py  utils.py  wingdings.txt  x
.cargo/: config.toml
.github/workflows/: cross_compile.yml  deploy.yml  manual_restart.yml
cogs/: chitter.py  context.py  errors.py  gadgets.py  louna.py  meta.py  neofetch.py  reload.py  terminal.py  testing.py  vore.py
cogs/gadgets/: __init__.py  horse.py  like.py  louna.py  lupa.py  markov.py  mjau.py  neofetch.py  stack.py  stickerboard.py  swish.py  tempemoji.py  unreact.py  vore.py  xenia.py
cogs/meta/: __init__.py  admin.py  alias.py  info.py  marbles.py  proxy.py  ticker.py
cogs/utilities/: __init__.py  pin.py  threads.py
data/: neofetch.csv  neofetch_updated
scripts/: generate_neofetch.py  trigger_updates.py
span-derive/: Cargo.toml
span-derive/src/: lib.rs
src/: admin.rs  config.rs  database.rs  errors.rs  main.rs  migrations.rs  state.rs  util.rs
src/cogs/: gadgets.rs  meta.rs  mod.rs
src/data/: mod.rs  neofetch.rs
