[package]
name = "oliviabot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
git2 = "0.18.3"
poise = { version = "0.6.1", features = ["cache"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
regex = "1.10.4"
rand = "0.8.5"
