[tool.poetry]
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
"discord.py" = "^2.4.0"
aiosqlite = "^0.20.0"
jishaku = "^2.5.2"
aioconsole = "^0.7.1"
watchdog = { version = "^4.0.1" }

[tool.poetry.group.dev.dependencies]
HyFetch = "^1.4.11"
colour-science = "^0.4.4"
matplotlib = "^3.9.0"
parse-discord = { git = "https://github.com/LyricLy/parse-discord", rev = "c7537a5" }
# requires ICU to be installed, might need to explicitly set $ICU_ROOT too
watchdog = { version = "^4.0.1", extras = ["watchmedo"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
