[tool.poetry]
package-mode = false
name = "oliviabot"
description = "we finally figured out how to automate olivia"
version = "0.1.0"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
"discord.py" = "^2.5.2"
aiosqlite = "^0.20.0"
jishaku = "^2.5.2"
watchdog = { version = "^4.0.1" }
gitpython = "^3.1.43"
numpy = "^2.2.2"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
aioconsole = "^0.7.1"
parse-discord = { git = "https://github.com/LyricLy/parse-discord", rev = "c658a244341900e952a64dc4fc76894e29f76b4b" }
HyFetch = "^1.4.11"
colour-science = "^0.4"
matplotlib = "^3.9.0"
watchdog = { version = "^4.0.1", extras = ["watchmedo"] }
requests = "^2.32.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
